# EePub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: Arduino.ino
frameworks/Arduino/: EePubArduino.h
frameworks/Desktop/: CMakeLists.txt  EePubDesktop.h  main.cpp
frameworks/Wasm/: EePubWasm.cpp  index.html
scripts/: build_desktop.sh  build_esp32_cyd.sh  build_lexbor.sh  build_wasm.sh
src/: DisplaySink.h  EePub.cpp  EePub.h  LayoutEngine.cpp  LayoutEngine.h  LexborWrapper.cpp  LexborWrapper.h  MemoryMonitor.cpp  MemoryMonitor.h  Renderer.cpp  Renderer.h  ePubLoader.cpp  ePubLoader.h
src/hal/: Hal.cpp  Hal.h
